kubernetes/feature-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-v1
  namespace: canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
      version: v1
  template:
    metadata:
      labels:
        app: demoapp
        version: v1
    spec:
      containers:
      - image: xxxxxxxx.dkr.ecr.ap-south-1.amazonaws.com/demo-app:v1
        imagePullPolicy: IfNotPresent
        name: demo-app-v1
        ports:
        - containerPort: 5000
