kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demoapp
  name: demoapp
  namespace: canary-deployment
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
    protocol: TCP
  selector:
    app: demoapp
  type: ClusterIP
