kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demoapp-gateway
  namespace: canary-deployment
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'canary-deployment.test.com'
    port:
      name: http
      number: 80
      protocol: HTTP
