kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp-virtualservices
  namespace: canary-deployment
spec:
  gateways:
  - demoapp-gateway
  hosts:
  - 'canary-deployment.test.com'
  http:
    route:
    - destination:
        host: demoapp.canary-deployment.svc.cluster.local
        port:
          number: 80
        subset: v1
      weight: 90
    - destination:
        host: demoapp.canary-deployment.svc.cluster.local
        port:
          number: 80
        subset: v2
      weight: 10
